--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#nuoto" data-category="nuoto"><img src="icone/nuoto.png" alt="Nuoto" /></a>
       <a href="#tennis" data-category="tennis"><img src="icone/tennis.png" alt="Tennis" /></a>
       <a href="#basket" data-category="basket"><img src="icone/basket.png" alt="Basket" /></a>
-      <a href="#formula1" data-category="formula1"><img src="icone/formula 1.png" alt="Formula 1" /></a>
+      <a href="#formula1" data-category="formula1"><img src="icone/formula 1.png" alt="Formula 1" class="formula1-icon" /></a>
       <a href="#equitazione" data-category="equitazione"><img src="icone/equitazione.png" alt="Equitazione" /></a>
       <a href="#atletica" data-category="atletica"><img src="icone/atletica.png" alt="Atletica" /></a>
     </div>
