--- a/index.html
+++ b/index.html
@@ -27,33 +27,10 @@
 
   <!-- Homepage con Slider + Notizie Eclatanti -->
   <section id="home" class="page active">
-    <div class="slider">
-      <div class="slide active" style="background-image: url('slider1.jpg');">
-        <h2>Notizia 1</h2>
-      </div>
-      <div class="slide" style="background-image: url('slider2.jpg');">
-        <h2>Notizia 2</h2>
-      </div>
-      <div class="slide" style="background-image: url('slider3.jpg');">
-        <h2>Notizia 3</h2>
-      </div>
-    </div>
-
-    <div class="featured-news">
-      <div class="news-item">
-        <img src="img/eclatante1.jpg" alt="Notizia 1">
-        <h3>Titolo Notizia 1</h3>
-      </div>
-      <div class="news-item">
-        <img src="img/eclatante2.jpg" alt="Notizia 2">
-        <h3>Titolo Notizia 2</h3>
-      </div>
-      <div class="news-item">
-        <img src="img/eclatante3.jpg" alt="Notizia 3">
-        <h3>Titolo Notizia 3</h3>
-      </div>
-    </div>
+  <div class="slider" id="home-slider"></div>
+  <div class="news-grid" id="home-news"></div>
   </section>
+
 
   <!-- Sezione Calcio -->
   <section id="calcio" class="page">
